fix parallelism in lib
