# app/docs/swagger.json
@@ -267,82 +267,10 @@
                         }
                     }
                 }
-            },
-            "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "sets alternatives to current task",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "alternatives"
-                ],
-                "summary": "SetAlternatives",
-                "operationId": "set-alts",
-                "parameters": [
-                    {
-                        "description": "alternatives info",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/entity.AlternativeModel"
-                            }
-                        }
-                    },
-                    {
-                        "type": "integer",
-                        "description": "task identifier",
-                        "name": "sid",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/controller.response"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/controller.response"
-                        }
-                    },
-                    "403": {
-                        "description": "Forbidden",
-                        "schema": {
-                            "$ref": "#/definitions/controller.response"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/controller.response"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/controller.response"
-                        }
-                    }
-                }
             }
         },
         "/solution/connect": {
-            "get": {
+            "post": {
                 "security": [
                     {
                         "ApiKeyAuth": []
@@ -528,14 +456,16 @@
                         }
                     }
                 }
-            },
-            "post": {
+            }
+        },
+        "/solution/defaults": {
+            "get": {
                 "security": [
                     {
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "sets criteria to current task",
+                "description": "get defaults linguistic scales",
                 "consumes": [
                     "application/json"
                 ],
@@ -543,60 +473,18 @@
                     "application/json"
                 ],
                 "tags": [
-                    "criteria"
+                    "task"
                 ],
-                "summary": "SetCriteria",
-                "operationId": "set-criteria",
-                "parameters": [
-                    {
-                        "description": "criteria info",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/entity.CriterionModel"
-                            }
-                        }
-                    },
-                    {
-                        "type": "integer",
-                        "description": "task identifier",
-                        "name": "sid",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
+                "summary": "GetDefaultLingScale",
+                "operationId": "get-default-scales",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controller.response"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/controller.response"
-                        }
-                    },
-                    "403": {
-                        "description": "Forbidden",
-                        "schema": {
-                            "$ref": "#/definitions/controller.response"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/controller.response"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/controller.response"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/eval.LinguisticScale"
+                            }
                         }
                     }
                 }
@@ -713,6 +601,62 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/controller.response"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/controller.response"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/controller.response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/controller.response"
+                        }
+                    }
+                }
+            }
+        },
+        "/solution/experts/role": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "gets a role of user for current task",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "task"
+                ],
+                "summary": "GetRole",
+                "operationId": "get-task-password",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "task identifier",
+                        "name": "sid",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/controller.response"
                         }
@@ -1068,12 +1012,6 @@
                             "$ref": "#/definitions/controller.TaskInput"
                         }
                     },
-                    "403": {
-                        "description": "Forbidden",
-                        "schema": {
-                            "$ref": "#/definitions/controller.response"
-                        }
-                    },
                     "404": {
                         "description": "Not Found",
                         "schema": {
@@ -1177,12 +1115,12 @@
                 "operationId": "create-task",
                 "parameters": [
                     {
-                        "description": "task options",
+                        "description": "task title",
                         "name": "input",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controller.TaskInput"
+                            "$ref": "#/definitions/controller.TitleInput"
                         }
                     }
                 ],
@@ -1380,6 +1318,45 @@
             }
         },
         "/user/settings": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "gets user account info",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "GetUser",
+                "operationId": "get-user",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entity.UserModel"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/controller.response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/controller.response"
+                        }
+                    }
+                }
+            },
             "delete": {
                 "security": [
                     {
@@ -1444,7 +1421,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controller.UserInput"
+                            "$ref": "#/definitions/controller.UserUpdateInfo"
                         }
                     }
                 ],
@@ -1579,6 +1556,9 @@
                 "method": {
                     "type": "string"
                 },
+                "sid": {
+                    "type": "integer"
+                },
                 "task_type": {
                     "type": "string"
                 },
@@ -1595,7 +1575,29 @@
                 }
             }
         },
+        "controller.TitleInput": {
+            "type": "object",
+            "properties": {
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
         "controller.UserInput": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "login": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "controller.UserUpdateInfo": {
             "type": "object",
             "properties": {
                 "email": {
@@ -1653,6 +1655,9 @@
                 },
                 "status": {
                     "type": "boolean"
+                },
+                "weight": {
+                    "$ref": "#/definitions/eval.Rating"
                 }
             }
         },
@@ -1666,10 +1671,7 @@
                     "type": "string"
                 },
                 "result": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/eval.Rating"
-                    }
+                    "$ref": "#/definitions/matrix.RankedList"
                 },
                 "sens_analysis": {
                     "$ref": "#/definitions/lib.SensitivityResult"
@@ -1690,6 +1692,9 @@
                 },
                 "method": {
                     "type": "string"
+                },
+                "sid": {
+                    "type": "integer"
                 },
                 "status": {
                     "type": "boolean"
@@ -1748,14 +1753,28 @@
                 "results": {
                     "type": "array",
                     "items": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/definitions/eval.Rating"
-                        }
+                        "$ref": "#/definitions/matrix.RankedList"
                     }
                 },
                 "threshold": {
                     "type": "number"
+                }
+            }
+        },
+        "matrix.RankedList": {
+            "type": "object",
+            "properties": {
+                "coeffs": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/eval.Rating"
+                    }
+                },
+                "order": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
                 }
             }
         }
